Css fix for activity tracker spacing

--- a/client/src/app/components/activity-tracker/activity-tracker.scss
+++ b/client/src/app/components/activity-tracker/activity-tracker.scss
@@ -361,7 +361,7 @@
       padding: 0;
       display: inline-block;
       vertical-align: top;
-      margin: 6px;
+      margin: 6px 5px;
       
       > span {
         padding: 0;
